[project]
name = "manim-dataflow-analysis"
version = "0.1.0"
description = "manim-dataflow-analysis is a library that improves manim so that it can generate dataflow analysis animations."
authors = [
    { name = "Berg Lucas", email = "55436804+BergLucas@users.noreply.github.com" },
]
readme = "README.md"
license = "MIT"
keywords = ["Poetry", "manim_dataflow_analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "manim (>=0.18.1,<0.19.0)",
    "networkx (>=2.6)",
    "types-networkx (>=2.6)",
    "frozendict (>=2.4.6,<3.0.0)",
]

[tool.poetry]
requires-poetry = "^2.0.0"
packages = [{ include = "manim_dataflow_analysis", from = "src" }]

[tool.poetry.requires-plugins]
poethepoet = "^0.33.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
mypy = "^1.15.0"
coverage = "^7.6.12"

[tool.poe.tasks]
test = "python -m unittest -v"
coverage = "coverage run -m unittest -v"
coverage-report = ["coverage", { cmd = "coverage report" }]
coverage-html = ["coverage", { cmd = "coverage html" }]
format = "ruff format src tests"
check = "ruff check --fix src tests"
check-nofix = "ruff check src tests"
check-unsafe = "ruff check --fix --unsafe src tests"
typecheck = "mypy src tests"
lint = ["format", "check", "typecheck"]
verify = ["lint", "test"]

[tool.coverage.run]
branch = true
source = ["src/manim_dataflow_analysis", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "N",   # pep8-naming
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "TCH", # flake8-type-checking
    "Q",   # flake8-quotes
    "PL",  # pylint
]

ignore = ["E203", "N818", "C901", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
